# tageslosung

./: INSTALL  Makefile  Makefile.am  Makefile.in  README  TODO  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  e-module-tageslosung.edc  e_modules-tageslosung.spec.in  libtool  liste.c  losungen2016.csv  losungen2016.xml  losungen2016_1.csv  losungen2017.xml  module.desktop.in  search_word  search_word.c  stingzerlegen  stingzerlegen.c
autom4te.cache/: output.0  requests  traces.0  traces.1
po/: Makefile  Makefile.in  POTFILES  ar.gmo  ar.po  bg.gmo  bg.po  ca.gmo  ca.po  ca.po~  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  el.gmo  el.po  eo.gmo  eo.po  eo.po~  es.gmo  es.po  fi.gmo  fi.po  fr.gmo  fr.po  fr.po~  gl.gmo  gl.po  gl.po~  he.gmo  he.po  hr.gmo  hr.po  hu.gmo  hu.po  id.gmo  id.po  it.gmo  (+38 more)
src/: Makefile  Makefile.am  Makefile.in  e_mod_config.c  e_mod_config.h  e_mod_main.c  e_mod_main.h  losung.xml
src/.deps/: e_mod_config.Plo  e_mod_main.Plo
